----------------------------------------------------------------------
 OmegaT 2.1.6 update 1
----------------------------------------------------------------------
  2 Enhancements
  0 Bugfix
----------------------------------------------------------------------
2.1.6 update 1 vs. 2.1.6

  Other enhancements:
  - Catalan localisation updated to 2.1.4 (UI, Readme, Instant Start, documentation)
  - Hungarian localisation updated to 2.1.x (UI, Readme, Instant Start, documentation)

----------------------------------------------------------------------
 OmegaT 2.1.6
----------------------------------------------------------------------
  2 Enhancements
  2 Bugfixes
----------------------------------------------------------------------
2.1.6 vs. 2.1.5 update 1

  Implemented requests:

  - Apertium machine translation
  http://sourceforge.net/support/tracker.php?aid=2999892

  Other enhancements:

  - DokuWiki file filter

  Bug fixes:

  - Calling the Project Files window (Ctrl+L) could generate an error 
in some circumstances

  - Some files were not closed when translating in console mode

----------------------------------------------------------------------
 OmegaT 2.1.5 update 1
----------------------------------------------------------------------
  1 Enhancement
  2 Bugfixes
----------------------------------------------------------------------
2.1.5 update 1 vs. 2.1.5

  Implemented requests:

  - Memorize search settings after each search
  http://sourceforge.net/support/tracker.php?aid=1605843

  Bug fixes:

  - Go To/Segment Number goes to wrong segment
  http://sourceforge.net/support/tracker.php?aid=2990761

  - User-defined font wasn't used when first opening the Search window

----------------------------------------------------------------------
 OmegaT 2.1.5
----------------------------------------------------------------------
  3 Enhancements
  1 Bugfix
----------------------------------------------------------------------
2.1.5 vs. 2.1.4 update 1
